results/SpecGenBench/2-shot/log-PerfectSquare-2023_11_06_03_04_58.txt
class PerfectSquare {
    //@ requires num >= 0;
    //@ ensures \result == (num == 0 || (\exists int i; i >= 1 && i * i == num));
    public static boolean isPerfectSquare(int num) {
        if(num == 0)
            return true;

        //@ maintaining (\forall int i; 1 <= i && i <= \old(num) && i * i <= \old(num); i * i != num);
        //@ decreases \old(num) - i * i;
        for(int i = 1; i * i <= num; i++) {
            if(i * i == num)
                return true;
        }
        return false;
    }
}
/home/max/Documents/JMLGPT/tmp/PerfectSquare.java:8: error: variable i is already defined in method isPerfectSquare(int)
        //@ maintaining (\forall int i; 1 <= i && i <= \old(num) && i * i <= \old(num); i * i != num);
                                     ^
1 error

